platform/security/gatekeeper/constraint-templates/require-ro-rootfs.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequirereadonlyrootfs
spec:
  crd:
    spec:
      names:
        kind: K8sRequireReadOnlyRootFs
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirereadonlyrootfs

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.readOnlyRootFilesystem
          msg := sprintf("Container %v must have readOnlyRootFilesystem=true", [container.name])
        }
